add features save game and load game

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             </div>
             <div class="text-center buttonContainer">
 
-                <button class="button">
+                <button id="save-game" class="button" style="display: none;">
                     Guardar Partida
                 </button>
 
-                <button class="button">
+                <button id="load-game" class="button">
                     Cargar Partida
                 </button>
 
