update readme and add new files

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"></script> -->
-    <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
-    integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
-    crossorigin="anonymous"
-  />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+        integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
     <script type="text/javascript" src="assets/scripts/boardCreation.js" async></script>
+    <script type="text/javascript" src="assets/scripts/modalScoreBoard.js" async></script>
+    <script type="text/javascript" src="assets/scripts/modalNewGame.js" async></script>
+    <script type="text/javascript" src="assets/scripts/storage.js" async></script>
     <script type="text/javascript" src="assets/scripts/move.js" async></script>
     <script type="text/javascript" src="assets/scripts/modal.js" async></script>
     <script type="text/javascript" src="assets/scripts/app.js" async></script>
