fix width message modal

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
     <div id="message-modal" class="modal">
     
-        <div class="modal-content">
+        <div id="message-modal-content" class="modal-content">
             <div class="modal-header">
                 <span id="close-modal-message" class="close">&times;</span>
                 <h3>Mensaje</h3>
