--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Mini Damas</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="Description" content="Juega a las damas online." />
+
+    <link rel="shortcut icon" href="/assets/img/icon.png">
     <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/boardStyles.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/modal.css">
@@ -13,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
         integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+
     <script type="text/javascript" src="assets/scripts/boardCreation.js" async></script>
     <script type="text/javascript" src="assets/scripts/modalScoreBoard.js" async></script>
     <script type="text/javascript" src="assets/scripts/modalNewGame.js" async></script>
